# PROJECTS

./: .gitignore  README.md
1_customer_churning/: pyproject.toml
1_customer_churning/workbooks/: EDA.ipynb  tf_implementation.ipynb  torch_implementation.ipynb
2_hand_digit_recognization/: main.py  pyproject.toml
2_hand_digit_recognization/workbooks/: torch_implementation.ipynb
